# patient-advocacy-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml  nightly.yaml
alembic/: env.py
alembic/versions/: 50ac16425eaa_patient_number_unique_per_facility.py  df797b3361f4_initial_schema.py
coding-agent/logs/: blockers.md  decisions.md  phase_0_complete.md  phase_11_complete.md  phase_1_complete.md  phase_6_complete.md  phase_7_complete.md  phase_8_complete.md
coding-agent/plans/: implementation_plan_v1.md
configs/: dev.yaml  production.yaml  staging.yaml  test.yaml
configs/experiments/: default.yaml
docs/: app_cheatsheet.md  bias_audit.md  compliance_verification.md  data_retention_policy.md  deployment_runbook.md  design_specification.md  glossary.md  promotion_criteria.md  security_review.md  system_requirements.md  test_catalog.md  traceability_matrix.md  troubleshooting.md
docs/adr/: 001-voice-only-interface.md  002-scin-database.md  003-contrastive-loss.md  004-medgemma-soap.md  005-vector-store.md
docs/architecture/: architecture_overview.md
docs/design/: prd.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: _db_config.sh  _run_with_background.sh  db_backup.sh  db_migrate.sh  db_reset.sh  db_restore.sh  db_seed.sh  db_setup.sh  db_status.sh  download_models.sh  download_piper_voices.sh  download_scin.sh  git_push.sh  git_setup.sh  index_embeddings.sh  init_data.sh  seed_db.py  setup.sh  start_autonomous_build.sh  start_server.sh  start_voice_pipeline.sh  stop_server.sh  sync_requirements.sh  sync_requirements_controller.py  train_embeddings.sh
src/: __init__.py
tests/: conftest.py
(+162 files in other folders)
